@@ -15,6 +15,8 @@ documents those changes that are of interest to users and administrators.
  -- PMIX - Added the direct connect authentication.
     When upgrading this may cause issues with jobs using pmix starting on mixed
     slurmstepd versions where some are less than 17.11.6.
+ -- Prevent the backup slurmctld from loosing the active/available node
+    features list on takeover.
 
 * Changes in Slurm 17.11.5
 ==========================
